manifests/ingress/wil-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wil-ingress
  namespace: dev
  labels:
    name: wil
  annotations:
    ingress.kubernetes.io/protocol: http
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: wil-service
            port: 
              number: 8888
